--- a/client/src/shared/ui/Input/Input.module.css
+++ b/client/src/shared/ui/Input/Input.module.css
@@ -3,18 +3,16 @@
 }
 
 .input {
-  padding: 0px 12px;
-
-  height: 48px;
+  padding: 12px 12px;
 
   border: 3px solid var(--green);
   border-radius: var(--radius-m);
-  color: var(--dark-green);
+  color: var(--sage);
 
   transition: 0.3s all var(--transition);
 
   &::placeholder {
-    color: var(--dark-green);
+    color: var(--sage);
   }
 
   &:focus {
